--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-body {
+* { 
   margin: 0;
+  padding: 0;
+}
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +13,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.App {
+  width: 100%;
+  min-height:100vh;
+  background: grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.session, .break,.timer{
+  border: 1px solid black;
+  width: 500px; 
+  height: 130px;
+  margin-bottom: 5px;
+  display:flex;
+  justify-content: center; 
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
 }
